workloads/demos-prod/ingress.yaml
#apiVersion: networking.gke.io/v1
#kind: ManagedCertificate
#metadata:
#  name: www-jasonumiker-com
#  namespace: default
#spec:
#  domains:
#    - www.jasonumiker.com
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-ingress"
#    networking.gke.io/managed-certificates: "www-jasonumiker-com"
#    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nyancat
            port:
              number: 80
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 8080
